fix misaligned theme switcher #844
closes #844

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,7 +9,7 @@ $bg-depth-2-dark: #1c1c2a; // cards  | etc
 $bg-depth-3-dark: #29293a; // cards  | etc
 $shadow-dark: 0 0.3rem 0.75rem rgb(0 0 0 / 50%);
 
-$theme-switcher-height: 25px;
+$theme-switcher-height: 24px;
 
 $text: rgb(15, 15, 15);
 $text-dark: rgb(226, 226, 226);
